payment-service.yaml
# 2. Payment Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      serviceAccountName: s3-sa
      containers:
      - name: payment-service
        image: 862016452072.dkr.ecr.us-east-2.amazonaws.com/kubox:payment-service-v1
        ports:
        - containerPort: 8083
          name: http
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          periodSeconds: 5
          failureThreshold: 40
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"

---
# 3. Payment Service
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: default
spec:
  selector:
    app: payment-service
  ports:
  - port: 8083
    targetPort: 8083
    name: http
  type: ClusterIP
